# myguru

./: .gitignore  LICENSE  README.md  pyproject.toml
src/myguru/: main.py
src/myguru/cls/: __init__.py  logger.py  rag_base.py  rag_builder.py  rag_query.py
src/myguru/utils/: __init__.py  utils.py
